--- a/LeagueStats_1.ipynb
+++ b/LeagueStats_1.ipynb
@@ -10,12 +10,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": null,
       "id": "4e46f37d",
       "metadata": {
         "id": "4e46f37d"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "",
+          "evalue": "",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31mFailed to start the Kernel. \n",
+            "\u001b[1;31m0.01s - Debugger warning: It seems that frozen modules are being used, which may\n",
+            "\u001b[1;31m0.00s - make the debugger miss breakpoints. Please pass -Xfrozen_modules=off\n",
+            "\u001b[1;31m0.00s - to python to disable frozen modules.\n",
+            "\u001b[1;31m0.00s - Note: Debugging will proceed. Set PYDEVD_DISABLE_FILE_VALIDATION=1 to disable this validation.\n",
+            "\u001b[1;31mc:\\mini\\Lib\\site-packages\\traitlets\\traitlets.py:2548: FutureWarning: Supporting extra quotes around strings is deprecated in traitlets 5.0. You can use 'hmac-sha256' instead of '\"hmac-sha256\"' if you require traitlets >=5.\n",
+            "\u001b[1;31m  warn(\n",
+            "\u001b[1;31mc:\\mini\\Lib\\site-packages\\traitlets\\traitlets.py:2499: FutureWarning: Supporting extra quotes around Bytes is deprecated in traitlets 5.0. Use '6c88157f-e281-4e90-a45c-eddc095269b4' instead of 'b\"6c88157f-e281-4e90-a45c-eddc095269b4\"'.\n",
+            "\u001b[1;31m  warn(\n",
+            "\u001b[1;31mBad file descriptor (D:\\bld\\zeromq_1629967000004\\work\\src\\epoll.cpp:100). \n",
+            "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+          ]
+        }
+      ],
       "source": [
         "import pandas as pd\n",
         "import numpy as np\n",
